--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "615"
+       "604"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,6 +68,7 @@
     "# List for holding lat_lngs and cities\n",
     "lat_lngs = []\n",
     "cities = []\n",
+    "\n",
     "\n",
     "# Create a set of random lat and lng combinations\n",
     "lats = np.random.uniform(lat_range[0], lat_range[1], size=1500)\n",
@@ -97,12 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.openweathermap.org/data/2.5/weather?&appid=4a003508187495e8eb48686ff55ba2e8&q=\n"
+     ]
+    }
+   ],
+   "source": [
+    "#base url\n",
+    "base_url = \"https://api.openweathermap.org/data/2.5/weather?\"\n",
+    "\n",
+    "#create query url\n",
+    "query_url = f\"{base_url}&appid={weather_api_key}&q=\"\n",
+    "print(query_url)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
