--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -218,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf01cbc6fbdc420e8ad1a7636f31ffad",
+       "model_id": "704bf90b4cd44c53931b4f1d26198149",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1413,18 +1413,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cv/96c1mcps5zzg0512q_6h53yh0000gn/T/ipykernel_31113/4141533710.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/cv/96c1mcps5zzg0512q_6h53yh0000gn/T/ipykernel_31547/4098287903.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotel_df[\"Hotel Name\"] = \"\"\n"
+      "  hotel_df[\"Hotel Name\"]=\"\"\n"
      ]
     }
    ],
    "source": [
     "#add hotel name to the Dataframe\n",
-    "hotel_df[\"Hotel Name\"] = \"\""
+    "hotel_df[\"Hotel Name\"]=\"\""
    ]
   },
   {
@@ -1435,8 +1435,7 @@
    "source": [
     "#set parameters\n",
     "params= {\"radius\": 5000,\n",
-    "         \"keyword\": \"hotels\",\n",
-    "         \"types\": \"hotel\",\n",
+    "         \"types\": \"lodging\",\n",
     "         \"key\": g_key   \n",
     "        }"
    ]
@@ -1453,10 +1452,156 @@
       "Missing\n",
       "Missing\n",
       "Missing\n",
-      "Missing\n",
-      "Missing\n",
       "Missing\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City ID</th>\n",
+       "      <th>City Name</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>5909514</td>\n",
+       "      <td>Brooks</td>\n",
+       "      <td>-111.8851</td>\n",
+       "      <td>50.5834</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76.77</td>\n",
+       "      <td>34</td>\n",
+       "      <td>16.11</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1659476933</td>\n",
+       "      <td>76.98</td>\n",
+       "      <td>Heritage Inn Hotel &amp; Convention Centre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>31</td>\n",
+       "      <td>5746545</td>\n",
+       "      <td>Portland</td>\n",
+       "      <td>-122.6762</td>\n",
+       "      <td>45.5234</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85.64</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1659476821</td>\n",
+       "      <td>90.57</td>\n",
+       "      <td>Embassy Suites by Hilton Portland Downtown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>45</td>\n",
+       "      <td>2381334</td>\n",
+       "      <td>Atar</td>\n",
+       "      <td>-13.0499</td>\n",
+       "      <td>20.5169</td>\n",
+       "      <td>8</td>\n",
+       "      <td>94.57</td>\n",
+       "      <td>31</td>\n",
+       "      <td>10.80</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>1659476910</td>\n",
+       "      <td>94.57</td>\n",
+       "      <td>Oumou Elghoura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>99</td>\n",
+       "      <td>5733351</td>\n",
+       "      <td>Jackson</td>\n",
+       "      <td>-122.8345</td>\n",
+       "      <td>42.4165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>94.69</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1659476958</td>\n",
+       "      <td>97.59</td>\n",
+       "      <td>Agate Village Apartments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>122</td>\n",
+       "      <td>5122534</td>\n",
+       "      <td>Jamestown</td>\n",
+       "      <td>-79.2353</td>\n",
+       "      <td>42.0970</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1659476271</td>\n",
+       "      <td>77.02</td>\n",
+       "      <td>Hampton Inn &amp; Suites Jamestown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  City ID  City Name  Longitude  Latitude  Cloudiness   Temp  \\\n",
+       "21           21  5909514     Brooks  -111.8851   50.5834           0  76.77   \n",
+       "31           31  5746545   Portland  -122.6762   45.5234           4  85.64   \n",
+       "45           45  2381334       Atar   -13.0499   20.5169           8  94.57   \n",
+       "99           99  5733351    Jackson  -122.8345   42.4165           0  94.69   \n",
+       "122         122  5122534  Jamestown   -79.2353   42.0970          75  75.00   \n",
+       "\n",
+       "     Humidity  Wind Speed Country        Date  Max Temp  \\\n",
+       "21         34       16.11      CA  1659476933     76.98   \n",
+       "31         46        1.99      US  1659476821     90.57   \n",
+       "45         31       10.80      MR  1659476910     94.57   \n",
+       "99         37        5.99      US  1659476958     97.59   \n",
+       "122        50        8.05      US  1659476271     77.02   \n",
+       "\n",
+       "                                     Hotel Name  \n",
+       "21       Heritage Inn Hotel & Convention Centre  \n",
+       "31   Embassy Suites by Hilton Portland Downtown  \n",
+       "45                               Oumou Elghoura  \n",
+       "99                     Agate Village Apartments  \n",
+       "122              Hampton Inn & Suites Jamestown  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1474,55 +1619,20 @@
     "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "    \n",
     "    #request\n",
-    "    hotel_location = requests.get(base_url, params=params)\n",
+    "    response = requests.get(base_url, params=params)\n",
     "    \n",
-    "    #json request\n",
-    "    hotel_location = hotel_location.json()\n",
     "    \n",
     "    \n",
     "    try:\n",
-    "        \n",
-    "        hotel_df.loc[index, \"Hotel Name\"] = hotel_location[\"results\"][0][\"name\"]\n",
+    "        #json request\n",
+    "        response_json = response.json()\n",
+    "    \n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = response_json['results'][0][\"name\"]\n",
     "    \n",
     "    except:\n",
     "        print('Missing')\n",
-    "        hotel_df.loc[index, \"Hotel Name\"] = \"NA\"\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'City'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m info_box_template \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m<dl>\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m<dt>Name</dt><dd>\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124mHotel Name}</dd>\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m</dl>\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Store the DataFrame Row\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# NOTE: be sure to update with your DataFrame name\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m hotel_info \u001b[38;5;241m=\u001b[39m [info_box_template\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mrow) \u001b[38;5;28;01mfor\u001b[39;00m index, row \u001b[38;5;129;01min\u001b[39;00m hotel_df\u001b[38;5;241m.\u001b[39miterrows()]\n\u001b[1;32m     14\u001b[0m locations \u001b[38;5;241m=\u001b[39m hotel_df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLat\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLng\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      4\u001b[0m info_box_template \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m<dl>\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m<dt>Name</dt><dd>\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124mHotel Name}</dd>\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m</dl>\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Store the DataFrame Row\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# NOTE: be sure to update with your DataFrame name\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m hotel_info \u001b[38;5;241m=\u001b[39m [\u001b[43minfo_box_template\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m index, row \u001b[38;5;129;01min\u001b[39;00m hotel_df\u001b[38;5;241m.\u001b[39miterrows()]\n\u001b[1;32m     14\u001b[0m locations \u001b[38;5;241m=\u001b[39m hotel_df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLat\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLng\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'City'"
-     ]
-    }
-   ],
-   "source": [
-    "# NOTE: Do not change any of the code in this cell\n",
-    "\n",
-    "# Using the template add the hotel marks to the heatmap\n",
-    "info_box_template = \"\"\"\n",
-    "<dl>\n",
-    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
-    "</dl>\n",
-    "\"\"\"\n",
-    "# Store the DataFrame Row\n",
-    "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "    \n",
+    "hotel_df.head()\n"
    ]
   },
   {
@@ -1530,11 +1640,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Do not change any of the code in this cell\n",
+    "\n",
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City Name}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row\n",
+    "# NOTE: be sure to update with your DataFrame name\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "locations = hotel_df[[\"Latitude\", \"Longitude\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "704bf90b4cd44c53931b4f1d26198149",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
-    "\n",
-    "\n",
-    "# Display figure\n"
+    "markers = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(markers)\n",
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
